# loghin-toolbox

./: CMakeLists.txt  README.md  main.cpp  matrixTest.cpp  sampleFile.txt
include/: Array.h  Matrix.h  String.h  types.h
src/: Array.cpp  Matrix.cpp  String.cpp  Vector.cpp  Vector2.cpp  Vector4.cpp
